--- a/index.html
+++ b/index.html
@@ -8,6 +8,26 @@
     <title>RPS</title>
 </head>
 <body>
+    <h1>MATCH UP</h1>
+    <div class="container">            
+            <p class="player">
+                PLAYER: <span id="player">player</span>
+                <p class="playerScore">0</p>
+            </p>
+            <p class="computer">
+                COMPUTER: <span id="computer">computer</span>
+                 <p class="computerScore">0</p>
+            </p>
+    </div>
     
+     <p id="gwinner"></p>
+     <p id="fRslt"><span id="text">TEXT</span></p>   
+     <div class="btn">
+        <button id="rock">ROCK</button>
+        <button id="paper">PAPER</button>
+        <button id="scissors">SCISSORS</button>
+     </div>
+       
+
 </body>
 </html>
